<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.Router"
    android:padding="@dimen/parent_layout_padding"
    android:orientation="vertical"
    android:background="@color/white">
<ImageView
    android:scaleType="centerCrop"
    android:src="@drawable/lpu_logo"
    android:layout_width="match_parent"
    android:layout_height="220sp" />
    <TextView
        android:textSize="@dimen/size_22"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_top_view"
        android:text="@string/hi_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textAlignment="center"
        android:text="@string/texthint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:visibility="gone"
        android:inputType="number"
        android:hint="@string/texthint"
        android:layout_marginTop="@dimen/margin_top_view"
        android:background="@drawable/input_outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:visibility="gone"
        android:inputType="numberPassword"
        android:hint="@string/hint_password"
        android:layout_marginTop="@dimen/size_18"
        android:background="@drawable/input_outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
   <Button

       android:visibility="gone"
       android:id="@+id/forgetPsd"
       android:textColor="@color/colorPrimaryDark"
       android:text="@string/forget"
       android:theme="@style/PrimaryFlatButton"
       android:layout_marginTop="@dimen/size_4"
       android:layout_gravity="end"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
    <Button
        android:visibility="gone"
        android:textColor="@color/white"
        android:background="@drawable/btn_gradient_style"
        android:text="@string/login"
        android:layout_marginTop="@dimen/padding_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/register"
        android:textColor="@color/colorPrimaryDark"
        android:theme="@style/FlatBtn"
        android:text="@string/signup"
        android:layout_marginTop="@dimen/margin_top_view"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/home"
        android:textColor="@color/colorPrimaryDark"
        android:theme="@style/FlatBtn"
        android:text="@string/home"
        android:layout_marginTop="@dimen/padding_4"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>