<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterAccount"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/parent_layout_padding">
    <ImageView
        android:src="@drawable/lpu_logo"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="180sp" />
    <EditText
        android:id="@+id/name"
        android:inputType="textPersonName"
        android:background="@drawable/input_outline"
        android:hint="@string/name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/mobile"
        android:inputType="number"
        android:layout_marginTop="@dimen/padding_12"
        android:background="@drawable/input_outline"
        android:hint="@string/enterMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/pin"
        android:inputType="numberPassword"
        android:layout_marginTop="@dimen/padding_12"
        android:background="@drawable/input_outline"
        android:hint="@string/hint_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
   <Button
       android:id="@+id/register"
       android:textColor="@color/white"
       android:background="@drawable/btn_gradient_style"
       android:text="@string/register"
       android:layout_marginTop="@dimen/margin_top_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />



</LinearLayout>