<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeUser"
    android:padding="@dimen/parent_layout_padding"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        app:cardUseCompatPadding="true"
        android:clipToPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="@dimen/size_4"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
          <de.hdodenhof.circleimageview.CircleImageView
              android:scaleType="centerCrop"
              android:id="@+id/image"
              android:src="@drawable/pament_app_logo"
              android:layout_gravity="center"
              app:civ_border_width="2dp"
              app:civ_border_color="#4c84ff"
              android:layout_width="180sp"
              android:layout_height="180sp" />
            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="@dimen/size_4"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:textSize="@dimen/size_20"
                android:id="@+id/name"
                android:text="@string/name_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textAlignment="center"
                android:id="@+id/phone"
                android:layout_marginTop="@dimen/padding_12"
                android:text="@string/enterMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textAlignment="center"
                android:id="@+id/card"
                android:text="@string/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textAlignment="center"
                android:id="@+id/time"
                android:text="@string/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:textColor="@color/white"
       android:background="@drawable/btn_gradient"
        android:id="@+id/reload"
        android:text="@string/refresh"
        android:layout_marginTop="@dimen/size_20"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>